Fixed Warning in Reflection